# aoc-2024

./: Makefile  README.md  christmas.txt  main.py  pyproject.toml
days/: day_01.py  day_02.py  day_03.py  day_04.py
