[tool.poetry]
name = "aoc-2024"
version = "1.0.0"
description = ""
authors = ["Nathan Dygant <nathan.dygant@gmail.com>", "Chefen"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.8"
advent-of-code-data = "^2.0.4"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
